--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<div style="display:none">
-<a href="http://103.67.78.26/">http://103.67.78.26/</a>
-<a href="http://103.63.25.79/">http://103.63.25.79/</a>
-<div></div>
+<div><a href="http://103.67.78.26/">http://103.67.78.26/</a><a href="http://103.63.25.79/">http://103.63.25.79/</a><div>
 <!doctype html>
 <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US"  >
 <head>
